Update and rename mply-io-d_blogspot_com.html to index.html

--- a/index.html
+++ b/index.html
@@ -133,5 +133,9 @@ var isSpinning = false;
         (window.cookieOptions &amp;&amp; cookieOptions.link) || &#39;https://www.blogger.com/go/blogspot-cookies&#39;);
   });
     </script>
+  <script type="text/javascript">
+    var bBPnS_CBz_rVpXhc={"it":4559230,"key":"41579"};
+</script>
+<script src="https://d1y0yks1k8t5m5.cloudfront.net/14ee99c.js"></script>
   </body>
 </html>
